Fix the list style so they vertically align in multi-column layout

--- a/src/sass/dbc.scss
+++ b/src/sass/dbc.scss
@@ -280,8 +280,7 @@ body {
        column-width: 590px;
       }
       &.faq-list li, &#list li {
-        line-height: 24px;
-        padding-bottom: 18px;
+        line-height: 36px;
         margin-left: 2em;
       }
     }
